file(GLOB_RECURSE srcs CONFIGURE_DEPENDS *.cxx)
add_executable(dispatcher_tests ${srcs})
if (AURORA_BUILD)
    find_package(Threads REQUIRED)
    target_link_libraries(dispatcher_tests PRIVATE testutils Threads::Threads)
else()
    target_link_libraries(dispatcher_tests PRIVATE testutils)
endif()
target_compile_options(dispatcher_tests PRIVATE -Wall -Wextra -pedantic)
set_target_properties(dispatcher_tests PROPERTIES INSTALL_RPATH_USE_LINK_PATH ON)
